[package]
name = "thghosting-data-centers"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "DateRange"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/thghosting-rs"
homepage = "https://github.com/bk-rs/thghosting-rs"
documentation = "https://docs.rs/thghosting-data-centers"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

scraper = { version = "0.12", default-features = false }

thiserror = { version = "1.0", default-features = false }
