[package]
name = "thghosting-data-centers"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "THG Hosting Data Centers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/thghosting-rs"
homepage = "https://github.com/bk-rs/thghosting-rs"
documentation = "https://docs.rs/thghosting-data-centers"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

scraper = { version = "0.14", default-features = false }

thiserror = { version = "1", default-features = false }
